--- a/package.json
+++ b/package.json
@@ -21,5 +21,17 @@
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "14.0.2"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/javierbarbozam/cortez-with-next.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/javierbarbozam/cortez-with-next/issues"
+  },
+  "homepage": "https://github.com/javierbarbozam/cortez-with-next#readme"
 }
