Draft of onvo install

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@onvo/onvo-pay-js": "^1.2.7",
+    "axios": "^1.6.2",
     "framer-motion": "^10.16.5",
     "next": "14.0.2",
     "react": "^18",
