--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.0.2",
     "nodemailer": "^6.9.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-ga": "^3.3.1"
   },
   "devDependencies": {
     "eslint": "^8",
